--- a/unnumberedtotoc.sty
+++ b/unnumberedtotoc.sty
@@ -24,7 +24,7 @@
   \PackageWarningNoLine{unnumberedtotoc}{%
    ^^J adding some features also provided by the KOMA classes.
    ^^J Consider switching, as there are much more features with KOMA.
-   ^^J Found at: http://tex.stackexchange.com/a/199086/37907
+   ^^J Found at: https://github.com/johannesbottcher/unnumberedtotoc
   }
   \@ifclassloaded{memoir}{
    \typeout{Sorry, this wasn't tested with `memoir'}
