tocbibind compat plus bugfix

--- a/unnumberedtotoc.sty
+++ b/unnumberedtotoc.sty
@@ -13,13 +13,13 @@
 % The Current Maintainer of this work is Johannes Böttcher
 %
 % This work consists of the file unnumberedtotoc.sty
-% Copyright 2014 - 2016 Johannes Böttcher
+% Copyright 2014 - 2018 Johannes Böttcher
 % This is an alpha Version. Please be aware that there is
 % absolutely no warranty and use this package at your own risk
 % 
 % Functionality and implementation heavily based on KOMA-script
 
-\ProvidesPackage{unnumberedtotoc}[2016/10/30 v.03 unnumbered chapters and sections to toc]
+\ProvidesPackage{unnumberedtotoc}[2018/01/28 v.04 unnumbered chapters and sections to toc]
 \RequirePackage{etoolbox}
 
 
@@ -53,13 +53,7 @@ and that's it}
 
 \AtBeginDocument{\providecommand{\MakeMarkcase}{}}
 
-\ifbool{@indentunnumbered}{%
-	\AtBeginDocument{%
-		\@ifpackageloaded{tocbibind}{%
-			\PackageWarningNoLine{unnumberedtotoc}{List
-			entries won't be indented}
-		}{}
-	}
+\ifbool{@indentunnumbered}{
 	\providecommand{\nonumberline}{\numberline{}}
 }{%
 	\providecommand{\nonumberline}{}
@@ -75,48 +69,44 @@ and that's it}
 \ProvideDocumentCommand{\addsectiontocentry}{ m }{%
 	\addxcontentsline{toc}{section}{#1}%
 }
-\ProvideDocumentCommand{\addpart}{ s o m }{%
+
+
+
+% Note to self, works with xparse 2017/02/10
+\ProvideDocumentCommand{\addpart}{ s O{#3} m }{%
 	\part*{#3}%
 	\markboth{}{}
-	\IfBooleanTF{#1}{
-	}{
-		\IfNoValueTF{#2}{
-			\addparttocentry{#3}
-			\markboth{\MakeMarkcase{#3}}{}%
-		}{%
+	\IfBooleanTF{#1}{%
+	}{%
 			\addparttocentry{#2}
 			\markboth{\MakeMarkcase{#2}}{}%
 		}
-	}
 }
-\ProvideDocumentCommand{\addchap}{ s o m }{%
+\ProvideDocumentCommand{\addchap}{ s O{#3} m }{%
 	\chapter*{#3}%
 	\markboth{}{}
-	\IfBooleanTF{#1}{
-	}{
-		\IfNoValueTF{#2}{
-			\addchaptertocentry{#3}
-			\markboth{\MakeMarkcase{#3}}{}%
-		}{%
+	\IfBooleanTF{#1}{%
+	}{%
 			\addchaptertocentry{#2}
 			\markboth{\MakeMarkcase{#2}}{}%
 		}
+}
+
+\ProvideDocumentCommand{\addsec}{ s O{#3} m }{%
+	\section*{#3}%
+	\markright{}
+	\IfBooleanTF{#1}{%
+	}{%
+			\addsectiontocentry{#2}
+			\markright{\MakeMarkcase{#2}}%
 	}
 }
 
-\ProvideDocumentCommand{\addsec}{ s o m }{%
-	\section*{#3}%
-	\markright{}
-	\IfBooleanTF{#1}{
-	}{
-		\IfNoValueTF{#2}{
-			\addsectiontocentry{#3}
-			\markright{\MakeMarkcase{#3}}%
-		}{%
-			\addsectiontocentry{#2}
-			\markright{\MakeMarkcase{#2}}%
-		}
-	}
+\AtBeginDocument{\@ifpackageloaded{tocbibind}%
+{
+\renewcommand{\toc@section}[2]{\addsec{#2}}%
+\renewcommand{\toc@chapter}[1]{\addchap{#1}}%
+}{}
 }
 
 \endinput
